--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@strapi/plugin-users-permissions": "4.1.7",
     "@strapi/strapi": "4.1.7",
     "better-sqlite3": "7.4.6",
+    "strapi-plugin-config-sync": "^1.0.0",
     "webpack": "^5.71.0"
   },
   "author": {
