--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "cucumber": "./node_modules/.bin/cucumber-js"
+    "cucumber": "./node_modules/.bin/cucumber-js",
+    "cucumber-win": "node_modules\\.bin\\cucumber-js"
   },
   "repository": {
     "type": "git",
