--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@cucumber/cucumber": "^7.3.2",
     "@cucumber/pretty-formatter": "^1.0.0-alpha.2",
     "@playwright/test": "^1.20.2",
+    "dotenv": "^16.0.0",
     "playwright": "^1.20.2"
   }
 }
